import kotlin.text.Regex.Companion.escape

group = "logbook"
description = "logbook-kai"
version = "26.5.1"

// UpgradeCode (GUID) for Windows Installer
val windowsUpgradeUUID = "880e4493-20fc-4c89-8c5b-01e4b2479b77"

java.sourceCompatibility = JavaVersion.VERSION_25

plugins {
    `java-library`
    id("com.gradleup.shadow") version "9.4.1"
}

repositories {
    mavenCentral()
}

dependencies {
    api(libs.org.glassfish.javax.json)
    api(libs.org.eclipse.jetty.jetty.server)
    api(libs.org.openjfx.javafx.controls)
    api(libs.org.openjfx.javafx.fxml)
    api(libs.org.openjfx.javafx.media)
    api(libs.org.openjfx.javafx.swing)
    api(libs.org.controlsfx.controlsfx)
    api(libs.com.fasterxml.jackson.core.jackson.databind)
    api(libs.org.slf4j.slf4j.api)
    api(libs.ch.qos.logback.logback.classic)
    api(libs.ch.qos.logback.logback.core)
    implementation(libs.commons.io.commons.io)
    implementation(libs.org.apache.commons.commons.lang3)
    implementation(libs.org.zeroturnaround.zt.exec)
    implementation(libs.org.zeroturnaround.zt.process.killer)
    testImplementation(libs.junit.junit)
    compileOnly(libs.org.projectlombok.lombok)
    annotationProcessor(libs.org.projectlombok.lombok)
    testCompileOnly(libs.org.projectlombok.lombok)
    testAnnotationProcessor(libs.org.projectlombok.lombok)
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.compilerArgs.add("-Xlint:deprecation")
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

val jar by tasks.getting(type = Jar::class) {
    manifest {
        attributes["Main-Class"] = "logbook.internal.Launcher"
        attributes["Implementation-Version"] = version
    }
}

fun archName() = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.getCurrentArchitecture().name

tasks.register(name = "prePackage", type = Copy::class) {
    description = "ZIPアーカイブを作成する準備を行う"
    dependsOn("shadowJar")
    mkdir("build/tmp/pkg-input")
    from("build/libs/logbook-kai-${version}-all.jar")
    into("build/tmp/pkg-input")
    rename(escape("logbook-kai-${version}-all.jar"), "logbook-kai.jar")
}

tasks.register(name = "package", type = Zip::class) {
    description = "Fat JARを含む配布用のZIPアーカイブを作成する"
    dependsOn("prePackage")
    from("dist-includes").exclude("*/.gitkeep")
    from("build/tmp/pkg-input/logbook-kai.jar")
}

tasks.register(name = "macApp", type = Exec::class) {
    description = "macOSアプリケーションを作成する"
    dependsOn("clean", "prePackage")
    workingDir(".")
    commandLine(
        "jpackage",
        "@pkg-options/common.txt",
        "@pkg-options/macos.txt",
        "--app-version", version,
        "--type", "app-image"
    )
}

tasks.register(name = "macDmg", type = Exec::class) {
    description = "macOSアプリケーションを含む配布用のディスクイメージを作成する"
    dependsOn("prePackage")
    workingDir(".")
    commandLine(
        "jpackage",
        "@pkg-options/common.txt",
        "@pkg-options/macos.txt",
        "--app-version", version,
        "--type", "dmg"
    )
    doLast {
        copy {
            from("build/distributions")
            into("build/distributions")
            include("Logbook-Kai-${version}.dmg")
            rename(escape("Logbook-Kai-${version}.dmg"), "logbook-kai-${version}-macos-${archName()}.dmg")
        }
        delete("build/distributions/Logbook-Kai-${version}.dmg")
    }
}

tasks.register(name = "winApp", type = Exec::class) {
    description = "Windowsアプリケーションを作成する"
    dependsOn("clean", "prePackage")
    workingDir(".")
    commandLine(
        "jpackage",
        "@pkg-options\\common.txt",
        "@pkg-options\\windows.txt",
        "--app-version", version,
        "--type", "app-image"
    )
}

tasks.register(name = "winZip", type = Zip::class) {
    description = "Windowsアプリケーションを含む配布用のZIPアーカイブを作成する"
    dependsOn("winApp")
    archiveFileName.set("logbook-kai-${version}-windows-${archName()}.zip")
    from("build/distributions/logbook-kai")
    from("dist-includes/README.url")
}

tasks.register(name = "winMsi", type = Exec::class) {
    description = "Windowsアプリケーションのインストーラを作成する"
    // "major.minor.small" でWindows Installerの挙動が変わるので
    // "year.month.day" 形式のバージョニングは不適切かもしれない
    dependsOn("prePackage")
    workingDir(".")
    commandLine(
        "jpackage",
        "@pkg-options\\common.txt",
        "@pkg-options\\windows.txt",
        "--app-version", version,
        "--type", "msi",
        "--win-menu",
        "--win-per-user-install",
        "--win-shortcut-prompt",
        "--win-upgrade-uuid", windowsUpgradeUUID
    )
    doLast {
        copy {
            from("build/distributions")
            into("build/distributions")
            include("logbook-kai-${version}.msi")
            rename(escape("logbook-kai-${version}.msi"), "logbook-kai-${version}-windows-${archName()}.msi")
        }
        delete("build/distributions/logbook-kai-${version}.msi")
    }
}
